examples/test/testpolicy18714.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18714
  namespace: namespace357
spec:
  podSelector:
    matchLabels:
      key35: value4
      key20: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value46
          key34: value4
      podSelector:
        matchLabels:
          key29: value24
          key25: value23
